# Shred-Nft-SC

./: README.md
backend/: .gitignore  Anchor.toml  cache.json  config.json  package.json  test_item  tsconfig.json
backend/api/: .gitignore  package.json
backend/api/src/: index.ts  scripts.ts
backend/assets/: 0.json  1.json  10.json  11.json  12.json  13.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/cli/: juiced_ape_evolution.json  juicing_scripts.ts  juicing_types.ts  old_to_new.json  scripts.ts  shred_bootcamp.json  shred_staking.json  types.ts
backend/programs/Juiced_Ape_Evolution/: Cargo.toml
backend/programs/Juiced_Ape_Evolution/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
backend/programs/Shred_Bootcamp/: Cargo.toml
backend/programs/Shred_Bootcamp/src/: account.rs  constants.rs  error.rs  lib.rs
backend/programs/Shred_Staking/: Cargo.toml
backend/programs/Shred_Staking/src/: account.rs  constants.rs  error.rs  lib.rs
backend/tests/: Shred_Bootcamp.ts
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: config.js  routes.js
frontend/src/assets/icons/: github.js  leftArrow.js  linkedin.js  menu.js  opensea.js  rightArrow.js  rightDoubleArrow.js  twitter.js  twitterWhite.js
frontend/src/assets/scss/: style.css
frontend/src/components/: BootCamps.js  CardLoading.js  Container.js  Footer.js  GameBox.js  Header.js  HomeBanner.js  NFTCard.js  NFTJuicedCard.js  NFTRebornCard.js  ProcessBar.js  SkeletonCard.js  styleHook.js
frontend/src/contexts/: bootcamp_helper.ts  helper.ts  juiced_ape_evolution.json  juiced_ape_evolution.ts  juiced_types.ts  juicing_helper.ts  old_to_new.json  shred_bootcamp.ts  shred_juiced.ts  shred_staking.ts  types.ts  workspace.code-workspace
frontend/src/layouts/dashboard/: index.js
frontend/src/pages/: Bootcamp.js  Game.js  Home.js  Ignition.js  Juiced.js  LeaderBoard.tsx  PartnerShip.js  Rebirth.js  Staking.js  Whey.js
