[package]
name = "Juiced_Ape_Evolution"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "juiced_ape_evolution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-associated-token-account = "1.0.5"
spl-token = "3.2.0"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
solana-program = "1.14"
