[package]
name = "Shred_Bootcamp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shred_bootcamp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = "3.2.0"
solana-program = "1.14"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }

Juiced_Ape_Evolution = { path = "../Juiced_Ape_Evolution", features = ["cpi"] }